# libeflvala

./: .gitignore  Makefile.am  NEWS  README  THANKS  configure.ac
eflvala/: Makefile.am  application.vala  notificationqueue.vala  objects.vala  thread.vala
examples/: Makefile.am
examples/ecore/: Makefile.am  ecore.vala
examples/edje/: edje.vala
examples/eina/: Makefile.am  eina.vala
examples/elementary/: Makefile.am  genlist.vala
examples/vapi/: Makefile.am  abstract.vala  main.vala
patches/: callback-typedefs-for-edje.patch  callback-typedefs-for-evas.patch  elementary-header.patch
tests/: .gitignore  Makefile.am  testeina.vala  testelementary.vala
vapi/: Makefile.am  ecore.vapi  edje.vapi  eina.vapi  elm.vapi  evas.vapi
